@@ -45,7 +45,8 @@ module ActiveMerchant #:nodoc:
         'passcard' => ->(num) { num =~ /^628026\d{10}$/ },
         'edenred' => ->(num) { num =~ /^637483\d{10}$/ },
         'anda' => ->(num) { num =~ /^603199\d{10}$/ },
-        'tarjeta-d' => ->(num) { num =~ /^601828\d{10}$/ }
+        'tarjeta-d' => ->(num) { num =~ /^601828\d{10}$/ },
+        'hipercard' => ->(num) { num&.size == 16 && in_bin_range?(num.slice(0, 6), HIPERCARD_RANGES) }
       }
 
       SODEXO_NO_LUHN = ->(num) { num =~ /^(505864|505865)\d{10}$/ }
@@ -193,10 +194,10 @@ module ActiveMerchant #:nodoc:
         506745..506747, 506753..506753, 506774..506778, 509000..509007, 509009..509014,
         509020..509030, 509035..509042, 509044..509089, 509091..509101, 509104..509807,
         509831..509877, 509897..509900, 509918..509964, 509971..509986, 509995..509999,
-        627780..627780, 636368..636368, 650031..650033, 650035..650051, 650057..650081,
-        650406..650439, 650485..650504, 650506..650538, 650552..650598, 650720..650727,
-        650901..650922, 650928..650928, 650938..650939, 650946..650978, 651652..651704,
-        655000..655019, 655021..655057
+        627780..627780, 636297..636298, 636368..636368, 650031..650033, 650035..650051,
+        650057..650081, 650406..650439, 650485..650504, 650506..650538, 650552..650598,
+        650720..650727, 650901..650922, 650928..650928, 650938..650939, 650946..650978,
+        651652..651704, 655000..655019, 655021..655057
       ]
 
       # Alelo provides BIN ranges by e-mailing them out periodically.
@@ -239,6 +240,11 @@ module ActiveMerchant #:nodoc:
 
       JCB_RANGES = [
         3528..3589, 3088..3094, 3096..3102, 3112..3120, 3158..3159, 3337..3349
+      ]
+
+      HIPERCARD_RANGES = [
+        384100..384100, 384140..384140, 384160..384160, 606282..606282, 637095..637095,
+        637568..637568, 637599..637599, 637609..637609, 637612..637612
       ]
 
       def self.included(base)
@@ -404,7 +410,7 @@ module ActiveMerchant #:nodoc:
             valid_naranja_algo?(numbers)
           when 'creditel'
             valid_creditel_algo?(numbers)
-          when 'alia', 'confiable', 'maestro_no_luhn', 'anda', 'tarjeta-d'
+          when 'alia', 'confiable', 'maestro_no_luhn', 'anda', 'tarjeta-d', 'hipercard'
             true
           when 'sodexo'
             sodexo_no_luhn?(numbers) ? true : valid_luhn?(numbers)
